src/snapshots/gpg_import__gpg__tests__configure_agent_defaults_creates_gpg_agent_conf.snap
---
source: src/gpg.rs
expression: content
---
default-cache-ttl 21600
max-cache-ttl 31536000
allow-preset-passphrase
allow-loopback-pinentry
