src/snapshots/gpg_import__gpg__tests__display_gpg_info.snap
---
source: src/gpg.rs
expression: info.to_string()
---
version: 2.4.5 (libgcrypt: 1.10.3)
homedir: /home/user/.gnupg
